# Obligatorio-InteligenciaArtificial-292814-286845

./: .gitignore  README.md
2048/: .gitignore  ANALISIS_PROYECTO.md  Analysis.ipynb  Analysis_Graficas.ipynb  Analysis_Long.ipynb  Comparacion_Long_vs_Optimized.ipynb  DOCUMENTACION.md  EJECUTAR_EXPERIMENTOS.py  Expectimax_Agent.py  Experiments.py  Heuristics.py  IMPLEMENTATION_SUMMARY.md  Main.ipynb  Minimax_Agent.py  README_FINAL.md  README_MEC.md  RESUMEN_EJECUCION.md  RESUMEN_EJECUTIVO.md  START_EXPERIMENTS.bat  START_EXPERIMENTS.sh  letra.md  pyproject.toml  quick_start_guide.py  run_experiments.bat  run_experiments.py
2048/results/: Expectimax_simple_c2_d3_20251214_213946.csv  Minimax_AB_intermediate_c1_d3_20251215_082710.csv  Minimax_AB_simple_c1_d3_20251214_112122.csv  Minimax_NoAB_intermediate_c1_d3_20251215_072336.csv  baseline_random_20251213_144456.csv  minimax_depth_comparison_20251213_172547.csv  summary_statistics.csv
2048/results/long/: Expectimax_simple_c1_d3_20251214_150242.csv  Minimax_AB_simple_c2_d3_20251214_180347.csv  Minimax_NoAB_simple_c1_d3_20251214_104808.csv  Minimax_NoAB_simple_c2_d3_20251214_173448.csv
2048/results/old/: alpha_beta_comparison_20251213_232001.csv  expectimax_depth_comparison_20251213_162240.csv  expectimax_heuristic_comparison_20251214_035619.csv
2048/results/optimized/: Expectimax_simple_c1_d3_20251215_200210.csv  Expectimax_simple_c2_d3_20251215_205514.csv  Minimax_AB_simple_c1_d3_20251215_193830.csv  Minimax_AB_simple_c2_d3_20251215_203318.csv  Minimax_NoAB_simple_c1_d3_20251215_193437.csv  (+1 more)
Cartpole/: pyproject.toml  (+1 more)
(+2 files in other folders)
