[tool.poetry]
name = "2048"
version = "0.1.0"
description = ""
authors = ["iturbideM <martiniturbidenoria@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
ipykernel = "^6.30.1"
numpy = "^2.1.2"
numba = "^0.61.2"
tqdm = "^4.67.1"
pandas = "^2.3.3"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
